# azure-devops-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI-TASKS.md  Dockerfile  README.md  ai_fix.py  azure_devops.py  build.sh  config.py  db.py  docker-compose.yml  docker-entrypoint.sh  main.py  notifier.py  package-lock.json  package.json  pyproject.toml  renderer.py  requirements-dev.txt  requirements.txt  test_server.py  utils.py  web.py
.agents/skills/resolve/: SKILL.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  BoardFilterBar.tsx  BoardView.tsx  DetailModal.tsx  DiffView.tsx  ErrorBanner.tsx  FilterDropdown.tsx  FixesView.tsx  Header.tsx  HistoryView.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  NotificationPopover.tsx  RightPanel.tsx  Sidebar.tsx  SnapshotDetail.tsx  StatsRow.tsx  WorkItemsTable.tsx
frontend/src/hooks/: useApi.test.ts  useApi.ts  useBrowserNotification.ts  (+2 more)
static/: app.js  components.css  index.html  style.css  tailwind.css
static/assets/: index-BAL-CzGq.js  index-BAjbYNAR.css  index-BCMVPd09.js  index-BPZ7rL5p.js  index-CLQgKpOw.css  index-CqHZOfVV.js  index-D9TGn8nj.js  index-DJlr4U_N.js  index-DOFj1THl.js  index-DhNkj37i.css  index-DlNmWf4p.css  index-FOVIxzrX.js  index-WfLWBJYf.js  index-i_vhv0Je.css
styles/: app.css
templates/: index.html  login.html
tests/: conftest.py  test_ai_fix.py  test_azure_devops.py  test_config.py  test_db.py  test_notifier.py  test_offline.py  test_utils.py  test_web.py
(+15 files in other folders)
