[project]
name = "azure-devops-assistant"
version = "1.0.0"
description = "Azure DevOps Sprint Board Monitor — Web UI + 增量对比 + AI 修复建议"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["azure-devops", "sprint", "monitor", "board"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "flask>=3.0.0",
    "waitress>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
check_untyped_defs = false

# 第三方库无类型存根，忽略导入错误
[[tool.mypy.overrides]]
module = [
    "schedule",
    "requests",
    "flask",
    "dotenv",
]
ignore_missing_imports = true
